Closes #104 Improved Consulta Processo